# server

./: .gitignore  CONTRIBUTING.md  Caddyfile  Caddyfile.template  MANIFEST.in  Makefile  README.md  TODO.txt  dev-requirements.txt  env.example  generate_caddyfile.py  grpc_server.py  http_server.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  service.proto  setup.py  test_client.py  update_gitignore.py
docs/: README.md  index.md
docs/api/: README.md
docs/getting-started/: README.md  configuration.md  installation.md  quick-start.md
docs/guides/: README.md  cli.md  runtime.md  services.md
scripts/: README.md  install.sh  install_dependencies.sh  update.sh
scripts/linux/: install.sh  update.sh
scripts/macos/: install.sh  update.sh
scripts/shared/: caddy.sh  certs.sh  check_caddy.sh  check_poetry.sh  services.sh  start_dev_services.sh  start_server.sh  start_services.sh  stop_services.sh
scripts/windows/: install.ps1  update.ps1
static/: app.js  commands.js  index.html  ollama.html  runtime.html
static/includes/: _base.html  _nav.html
static/makefile-client/: README.md  index.html
static/ollama-chat/: README.md  index.html
static/runtime-environment/: README.md  index.html  runtime.js
tests/: README.md  __init__.py  conftest.py
tests/grpc/: test_client.py  test_grpc.py
tests/http/: test_http.py
tests/rest/: test_rest.sh
tests/unit/: test_http_server.py  test_makefile_service.py
veridock/: __init__.py  grpc_server.py  http_gateway.py  main.py
veridock/cli/: __init__.py  utils.py
veridock/cli/commands/: __init__.py  init.py  server.py  service.py
